增加任务跳转字段

--- a/mission_manager/i18n/zh_CN.po
+++ b/mission_manager/i18n/zh_CN.po
@@ -295,6 +295,12 @@ msgid "Batch Number"
 msgstr "上线批次"
 
 #. module: mission_manager
+#: model:ir.model.fields,field_description:mission_manager.field_mission_manager_head__rdc_url
+#: model:ir.model.fields,help:mission_manager.field_mission_manager_head__rdc_url
+msgid "RDC URL"
+msgstr "RDC链接"
+
+#. module: mission_manager
 #: model:ir.model.fields,field_description:mission_manager.field_mission_manager_head__days
 #: model:ir.model.fields,help:mission_manager.field_mission_manager_head__days
 #: model:ir.model.fields,field_description:mission_manager.field_mission_manager_head__days2
